# switchamba

./: .gitignore  build-deb.sh  pyproject.toml  switchamba-setup
debian/: changelog  control  copyright  postinst  postrm  prerm  rules  switchamba-setup-wrapper  switchamba-setup.desktop  switchamba.service
gnome-extension/: extension.js  metadata.json
src/switchamba/: __init__.py  __main__.py  config.py
src/switchamba/bedrock/: cache.py  client.py
src/switchamba/detection/: detector.py  dictionary.py  ngram.py
src/switchamba/input/: keymap.py  reader.py
src/switchamba/switching/: switcher.py
systemd/: switchamba.service
tests/: test_bedrock.py  test_detector.py  test_keymap.py  test_line_correction.py  test_ngram.py  test_reader.py
